@@ -12,5 +12,5 @@ EBUILD 389-ds-base-1.2.1-r2.ebuild 2040 RMD160 6b56142792dd730bec8f8d31398010305
 EBUILD 389-ds-base-1.2.2.ebuild 2319 RMD160 d3f32ba4a3753abcbea75f9e4e92f8441c8d9921 SHA1 08d064e9c8a33a28c4a47f046cefe2b460ec8e96 SHA256 c3844cafe2851400c7ee19f606dac64a28655ae1d16a9caddf49140a797be536
 EBUILD 389-ds-base-1.2.3.ebuild 2482 RMD160 03039d9bdc305c21ea285a35dc3dd61ca22924f9 SHA1 b6d103ba82b54627e6ed14171f3ec5f97bb07ceb SHA256 35414dc5703c464b758d3fb52656333313f9011a179014c0c0256a5b84d8070e
 EBUILD 389-ds-base-1.2.4.ebuild 2645 RMD160 483522b1926a95ca1b60d183aa8c8bb16ef6f094 SHA1 fd6849fa97c0ff79fe9b1046f279262732bbc0da SHA256 6753074934adbd669857711e3db6d7f384514f16e665f2e43d3dd32c1997e549
-MISC ChangeLog 2064 RMD160 62ddbdbcbdc787161e4a166ab5de09d1666712a7 SHA1 b5b67a8d0de68f17e71dd35e27503e77452d7160 SHA256 8e560983e2ce34543d8d164cb3ecc98c2ba5865b1944e6769c2276f6b462fc2a
+MISC ChangeLog 2166 RMD160 9542f2554c272aa5010042b461d75f0f31c883eb SHA1 f02c8533b8aa7b6d4dc44b35871824ff9f5516d3 SHA256 9b907f2cc46761e8c37aafb941596a4d83870ec54f1419aaa9b56a0f305c557d
 MISC metadata.xml 898 RMD160 283ed9b77a73fdac0bd215f7b0820da27541c3c5 SHA1 44728393c23fb6b0d1f9f251d13530935abfabad SHA256 1035e0e765c9c55e0b6df59b85c430e76b79264065b225bed76c9345b9b850a8
